# iotrs

./: Cargo.toml  Embed.toml  README.md  _buildUpload copy.sh  buildUpload.sh  openocd.cfg  out.map
.cargo/: config.toml
.github/workflows/: main.yml
backup/: build.rs
examples/: blinky_basic.rs  main_ethernet.rs  main_serial.rs  main_tempds18b20.rs
src/: main.rs
src/ds18b20/: mod.rs
src/onewire/: address.rs  commands.rs  crc.rs  error.rs  mod.rs
