[package]
name = "iotrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# for cargo flash
[package.metadata]
chip = "ATSAMD21G18AU"

[dependencies]
metro_m0 = { git = "https://github.com/atsamd-rs/atsamd", features = ["rt","usb"] }
arrform = "0.1.1"
atsamd-hal = { version = "0.15.1", features = ["rtic", "unproven", "use_rtt", "atsamd21g", "samd21g-rt", "library", "usb"] }
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
heapless = "0.7.16"
panic-halt = "0.2.0"
usb-device = "0.2.9"
usbd-serial = "0.1.1"
rtt-target = "0.4.0"
# embedded-hal = { version = "0.2.7", feaures = ["unproven"] }

# [target.thumbv6m-none-eabi]
# rustflags = [
#   "-C", "linker=arm-none-eabi-gcc",
#   "-C", "link-arg=-nostartfiles",
#   "-C", "link-arg=-Wl,--print-memory-usage",
#   "-C", "link-arg=-Wl,-Map=out.map",
#   "-C", "link-arg=-Wl,--verbose",
#   "-C", "save-temps",
#   "--emit", "asm",
# ]